--- a/lib/geb/samples/bootstrap_jquery/shared/partials/_meta_tags.html
+++ b/lib/geb/samples/bootstrap_jquery/shared/partials/_meta_tags.html
@@ -17,7 +17,7 @@
 
 <!-- Site manifest -->
 <link rel="canonical"                   href="_{site_url}_/_{relative_path}_" />
-<link rel="manifest"  type="image/png"  href="/site.webmanifest" />
+<link rel="manifest"  type="image/png"  href="_{site_url}_/site.webmanifest" />
 
 <!-- Open Graph -->
 <meta property="og:type"          content="website" />
