--- a/lib/geb/samples/basic/assets/css/site.css
+++ b/lib/geb/samples/basic/assets/css/site.css
@@ -1,7 +1,46 @@
 BODY {
-  background-color: #1A2D3D;
+  background-color: #FFFFFF;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  color: #fff;
+  color: #000000;
+}
+
+.header {
+  padding: 20px 10px;
+  border-bottom: 1px solid#9FD88D;
+  .header-right {
+    float: right;
+    a {
+      border: 1px solid #9FD88D;
+      border-radius: 5px;
+      color: #000000;
+      text-decoration: none;
+      padding: 10px;
+      &:hover { background-color: #9FD88D; }
+    }
+  }
+}
+
+.main {
+  padding: 20px;
+  .main-left {
+    float: left;
+    width: 40%;
+    padding: 10px;
+  }
+  .main-right {
+    float: right;
+    width: 60%;
+    img {
+      width: 100%;
+      border: 1px solid #9FD88D;
+      border-radius: 20px;
+    }
+  }
+}
+
+.footer {
+  padding-top: 20px;
+  clear: both;
 }
