--- a/lib/geb/samples/basic/shared/partials/_meta_tags.html
+++ b/lib/geb/samples/basic/shared/partials/_meta_tags.html
@@ -1,7 +1,7 @@
 
 <!-- Meta tags -->
 <meta charset="utf-8" />
-<meta name="generator"    content="Geb 1.0.0" />
+<meta name="generator"    content="Geb _{geb_version}_" />
 <meta name="viewport"     content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <meta name=”robots”       content="index, follow" />
 <meta name="description"  content="_{title}_" />
